# ssg-capstone-reporting

./: .gitignore  README.md  pyproject.toml
docs/: index.html  reporting.html  search.json
reports/: .gitignore  _quarto.yml  index.qmd  reporting.qmd  styles.css  utils.py
