[tool.poetry]
name = "ssg-capstone-reporting"
version = "0.1.0"
description = ""
authors = ["John Leonard <jdleonard@vcu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
plotly = "^5.22.0"
gspread = "^6.1.0"
pandas = "^2.2.2"
oauth2client = "^4.1.3"
tabulate = "^0.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
